@startuml DomainDiagram
hide empty members
skinparam classAttributeIconSize 0

class User {
  +id: UInt
}

class AuthUser {
  +token: String
}

class Table {
  +id: UInt
  --
  +checkAvailability(): Boolean
}

class Participant { }

enum Role {
  PLAYER
  READY
  SPECTATOR
}

class Name <<value>> {
  +string: String
}

class Email <<value>> {
  +string: String
}

class Password <<value>> {
  +string: String
}

class Game {
  +id: UInt
  +winner: Player?
  --
  +placeOnBoard(player: Player, position: BoardPosition, card: Card, idx: UInt): Game
  +nextPhase(): Game
  +nextTurn(): Game
  +checkWinner(): Game
  +startTurnDraw(): Game
  +moveCharacter(from: BoardTile, to: BoardTile): Game
  +drawItem(player: Player, boardTile: BoardTile): Game
}

class Player {
  +user: User
  +hand: Map<UInt, Card>
  +currentCharacter: String?
  --
  +addToHand(card: Card): Player
  +removeFromHand(idx: UInt): Player
}

class Card {
  +type: CardType
}

enum CardType {
  TILE
  CHARACTER
  ITEM
}

class TileCard {
  +tile: Tile
}

class CharacterCard {
  +character: Character
}

class ItemCard {
  +item: Item
}

class Spectator { }

class Board {
  --
  +checkBlocked(position: BoardPosition, tile: Tile)
  +placeTile(position: BoardPosition, tile: Tile, turnPhase: TurnPhase): Board
  +placeCharacter(position: BoardPosition, player: Player, character: Character, turnPhase: TurnPhase): Board
  +equipItem(position: BoardPosition, player: Player, item: Item, turnPhase: TurnPhase): Board
  +reduceCooldown(): Board
}

class BoardTile {
  +pos: BoardPosition
  +tile: Tile
  +cooldown: UInt
  +character: Character?
}

class BoardPosition {
  +x: Int
  +y: Int
  --
  +neighbour(direction: Direction): BoardPosition
  +coords(): String
}

class Tile {
  +connections: List<Direction>
  +specialEffect: TileEffect
  --
  +canConnectTo(dir: Direction, tile: Tile): Boolean
  +rotate(right: Boolean): Tile
  +getBlocked(adjTiles: List<Pair<Direction, BoardTile>>): List<Direction>
  +getAdjacent(tiles: BoardTiles, targetPos: BoardPosition): List<Pair<Direction, BoardTile>>
}

class TileEffect {
  +type: TileEffectTypes
  +maxCooldown: UInt
  +info: String
}

enum TileEffectTypes {
  None
  Start
  Chest
  BigChest
}

enum Direction {
  EAST
  NORTH
  SOUTH
  WEST
}

class Turn {
  +gameTurn: UInt
  +playerTurn: List<UInt>
  +phase: TurnPhase
  --
  +turnString(): String
}

enum TurnPhase {
  CONSTRUCTION
  SUBSTITUTION
  MOVEMENT
}

class BoardTiles <<typealias>> {
  List<BoardTile>
}

class ItemDeck <<typealias>> {
  Map<Item, UInt>
}

User *-- "0..1" AuthUser : auth
User *-- Name : name
User *-- Email : email
User *-- Password : password

Table *-- Name : name
Table o-- "1" User : owner
Table *-- "0..*" Participant : participants

Participant o-- User : user
Participant *-- Role : role

Game *-- "1..*" Player : players
Game *-- "0..*" Spectator : spectators
Game *-- Board : board
Game *-- TileDeck : tileDeck
Game *-- ItemDeck : itemDeck
Game *-- Turn : turn
Game o-- "0..1" Player : winner

Player o-- User : user
Player *-- "0..*" Card : hand

Card <|-- TileCard
Card <|-- CharacterCard
Card <|-- ItemCard

TileCard *-- Tile
CharacterCard *-- Character
ItemCard *-- Item

Spectator o-- User : user

Board *-- BoardTiles : tiles
BoardTiles *-- "0..*" BoardTile

BoardTile *-- BoardPosition : pos
BoardTile *-- Tile : tile
BoardTile o-- "0..1" Character : character

Tile *-- "1..*" Direction : connections
Tile *-- TileEffect : specialEffect

TileEffect *-- TileEffectTypes : type

Turn *-- TurnPhase : phase

TileDeck *-- "0..*" Tile : copies
ItemDeck *-- "0..*" Item : copies

@enduml